# ChangeLog for dev-util/darcs
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/darcs/Attic/ChangeLog,v 1.102 2009/07/21 18:20:09 kolmodin Exp $

*darcs-2.2.1 (21 Jul 2009)

  21 Jul 2009; Lennart Kolmodin <kolmodin@gentoo.org> +darcs-2.2.1.ebuild:
  Version bump.

*darcs-2.1.0-r1 (20 Oct 2008)

  20 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org> -darcs-2.1.0.ebuild,
  +darcs-2.1.0-r1.ebuild:
  Make sure the manual is built when the doc flag is set, the configure
  argument had changed. Patch by Joachim Fasting <joachim.fasting@gmail.com>.
  
  Also remove the dep on dev-haskell/http, as it is optional and yet not
  keyworded on all arches darcs supports.

  19 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  -darcs-2.1.0_pre2.ebuild, -darcs-2.1.0_pre3.ebuild:
  Remove pre-releases of darcs-2.1.0

*darcs-2.1.0 (19 Oct 2008)

  19 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org> +darcs-2.1.0.ebuild:
  Version bump

  18 Oct 2008; nixnut <nixnut@gentoo.org> darcs-2.0.2.ebuild:
  Stable on ppc wrt bug 239368

  08 Oct 2008; Markus Meier <maekke@gentoo.org> darcs-2.0.2.ebuild:
  amd64/x86 stable, bug #239368

  04 Oct 2008; Raúl Porcel <armin76@gentoo.org> darcs-2.0.2.ebuild:
  alpha/ia64 stable wrt #239368

*darcs-2.1.0_pre3 (04 Oct 2008)

  04 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  +darcs-2.1.0_pre3.ebuild:
  Add the latest pre release of darcs 2.1.0, the third.

  02 Oct 2008; Ferris McCormick <fmccor@gentoo.org> darcs-2.0.2.ebuild:
  Sparc stable --- Bug #239368 --- All tests pass and it installs as expected.

  02 Oct 2008; Jeroen Roovers <jer@gentoo.org> darcs-2.0.2.ebuild:
  Stable for HPPA (bug #239368).

  02 Oct 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  darcs-2.1.0_pre2.ebuild:
  Add ~hppa too, as previous versions work well with it.

  29 Sep 2008; Lennart Kolmodin <kolmodin@gentoo.org> darcs-1.0.9.ebuild: