@@ -21,13 +21,13 @@ EBUILD darcs-1.0.9.ebuild 3105 RMD160 242b1d272995f5e46e4647eb1b8dd3b1c20d5b36 S
 EBUILD darcs-1.1.0_pre1.ebuild 3159 RMD160 9afeda06991d7494fddd19e1262f1597d7e5d1be SHA1 c85e03cf1aa6849d7bcb6a03eaa99a08cb429f80 SHA256 b3870adb092a5fac4f0328b7f2155a86597e3e8cb42241a37bad6039a97d6dc9
 EBUILD darcs-2.0.2.ebuild 2679 RMD160 c93f8f7aa2d138b80586a9b446baaa7974a53110 SHA1 170154a4c65e35166771bd82eeb949ee87424374 SHA256 a3bf908c5844d045bc7b4b62b61352de01537f2041d6a3ad04cc48d1bb913a96
 EBUILD darcs-2.1.0-r1.ebuild 2806 RMD160 8fed3d5b17f1c7b1b5903264217a72a882165be7 SHA1 f6ddf2460fafcb594025c0bbc5685607dcd774a2 SHA256 a7c3b75112208630dc8000ea3c5fb478c89d729a2701e43a4ce76849e96ff5ff
-EBUILD darcs-2.2.1.ebuild 2286 RMD160 e47dcb2f7c3e101b37660a8dc2dea03afe3ba96e SHA1 6c903c2858f0ad6a2e82a9c2c5c2e283da1f3bf3 SHA256 672e9d7f854e8d499cd24e5f85abf31ed3a218d4c1ca4476df16a4affd33ee47
-MISC ChangeLog 15395 RMD160 697038c09af12ef20b2c5bee6d090f5e2350f56b SHA1 61a045087a75620af8a1aabf97a3a8d3702b3b0d SHA256 a03c833349b8ffb47ab02f9db8a5932e0c98953ee91b811c2d4d936b90bdb64c
+EBUILD darcs-2.2.1.ebuild 2316 RMD160 f53ccd4745b20e6fda26cdb647b0506d8c49730b SHA1 360e4aaeb38c0e6da8458eacb4a4279fd12ae9da SHA256 86e5863eda1b06a525e4341e86b14487d899423dd68310a8cd3aaa587528b664
+MISC ChangeLog 15610 RMD160 7952849da198aaf627abe691006491201a3bec25 SHA1 3de81be5c1c5f2588c7edb9569e149d1b0e8215d SHA256 5102ee89171bd1f7075d13e5993c4018753d32929836323b3aa2146e64830c25
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpmBtcACgkQ1n/CYbXjntLz0gCfQVymunVajmgwYfhgJiIZi4eW
-pOsAoKgq3u1q+GRDYLKkZGQBhaoIXhnd
-=JdEe
+iEYEARECAAYFAkprBmAACgkQ1n/CYbXjntKT8wCdGtVS15qJtjYE5EXLd9/mXHds
+wQwAoIhnJjrRmz2Okg4IQXaGLa+rpgId
+=H3cp
 -----END PGP SIGNATURE-----
